some small improvements

--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "reveal.js",
-  "version": "3.5.0",
-  "description": "The HTML Presentation Framework",
-  "homepage": "http://lab.hakim.se/reveal-js",
-  "subdomain": "revealjs",
+  "name": "why-tdd",
+  "version": "1.0.0",
+  "description": "4 Years of TDD. The good, the bad, the ugly",
   "main": "js/reveal.js",
   "scripts": {
     "test": "grunt test",
@@ -11,13 +9,11 @@
     "build": "grunt"
   },
   "author": {
-    "name": "Hakim El Hattab",
-    "email": "hakim.elhattab@gmail.com",
-    "web": "http://hakim.se"
+    "name": "Christoph Welcz"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/hakimel/reveal.js.git"
+    "url": "git://github.com/enolive/why-tdd.git"
   },
   "engines": {
     "node": ">=4.0.0"
